--- a/service-web/src/views/ChallengeStates/challenge-states.html
+++ b/service-web/src/views/ChallengeStates/challenge-states.html
@@ -10,36 +10,35 @@
         <h2 class="f3 fw3 white ma0">ON HOLD</h2>
         <p class="white mb4 f5 fw5">This will change things. And we want you to be involved</p>
       </div>
-      <OnHold></OnHold>
+      <OnHold :challengeData="challengeData"></OnHold>
       <div class="cf db tl">
         <h2 class="f3 fw3 white ma0">DOING</h2>
         <p class="white mb4 f5 fw5">This will change things. And we want you to be involved</p>
       </div>
-      <Doing></Doing>
+      <Doing :challengeData="challengeData"></Doing>
 
       <div class="cf db tl">
         <h2 class="f3 fw3 white ma0">SKIPPED</h2>
         <p class="white mb4 f5 fw5">This will change things. And we want you to be involved</p>
       </div>
-      <Skipped></Skipped>
+      <Skipped :challengeData="challengeData"></Skipped>
 
       <div class="cf db tl">
         <h2 class="f3 fw3 white ma0">DONE</h2>
         <p class="white mb4 f5 fw5">This will change things. And we want you to be involved</p>
       </div>
-      <Done></Done>
+      <Done :challengeData="challengeData"></Done>
 
       <div class="cf db tl">
         <h2 class="f3 fw3 white ma0">NOTE DONE</h2>
         <p class="white mb4 f5 fw5">This will change things. And we want you to be involved</p>
       </div>
-      <NotDone></NotDone>
+      <NotDone :challengeData="challengeData"></NotDone>
 
       <div class="cf db tl">
         <h2 class="f3 fw3 white ma0 mb4">NO CHECK-IN </h2>
       </div>
-      <NoCheckIn></NoCheckIn>
-
+      <NoCheckIn :challengeData="challengeData"></NoCheckIn>
     </div>
   </section>
 </div>
