--- a/service-web/src/components/loader/loader.html
+++ b/service-web/src/components/loader/loader.html
@@ -1,3 +1,4 @@
 <div class="loader-backdrop">
   <div class="loader"></div>
 </div>
+<!--<el-progress :percentage="percentage" show-text="false" color="#8e71c7"></el-progress>-->
