--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -1,9 +1,9 @@
 <div class="wrapper avenir">
-  <header class="cf w-100 pl3 pr3 ph0-ns bg-white">
-    <div class="w-100 w-80-ns center">
-      <h3 class="f3 fw2 dark-blue pt2 pb2">DASHBOARD PROPOSAL</h3>
-    </div>
-  </header>
+  <!--<header class="cf w-100 pl3 pr3 ph0-ns bg-white">-->
+    <!--<div class="w-100 w-80-ns center">-->
+      <!--<h3 class="f3 fw2 dark-blue pt2 pb2">DASHBOARD PROPOSAL</h3>-->
+    <!--</div>-->
+  <!--</header>-->
   <section class="cf w-100 ph0 ph6-l pt5 relative">
     <div class="gradient-blue absolute right-0 left-0 top-0 height-480 z-1"></div>
     <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
@@ -168,10 +168,10 @@
     <!--</div>-->
   </section>
 
-  <footer class="bg-light-gray">
-    <div class="dt w-100 mw8 ph3 ph3-m ph3-l pv4 center">
-      <h1 class="f3 b dark-blue
- tc o-50">FOOTER</h1>
-    </div>
-  </footer>
+  <!--<footer class="bg-light-gray">-->
+    <!--<div class="dt w-100 mw8 ph3 ph3-m ph3-l pv4 center">-->
+      <!--<h1 class="f3 b dark-blue-->
+ <!--tc o-50">FOOTER</h1>-->
+    <!--</div>-->
+  <!--</footer>-->
 </div>
