--- a/service-web/src/components/challengeStates/onHold/onHold.html
+++ b/service-web/src/components/challengeStates/onHold/onHold.html
@@ -19,10 +19,10 @@
           {{(challengeData['challenge'] || {})['shortDescription']}}
         </p>
         <div>
-          <a class="f6 fw5 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="javascript:void(0)">
+          <a @click.stop.prevent="acceptOrSkip('accept')" class="f6 fw5 link dim br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="javascript:void(0)">
             ACCEPT TRAIN
           </a>
-          <a class="f6 fw5 link dim br-pill ph4 mb2 mt3 dib blue b--blue ba pt2 pb2 lh-copy ml2" href="javascript:void(0)">
+          <a @click.stop.prevent="acceptOrSkip('skip')" class="f6 fw5 link dim br-pill ph4 mb2 mt3 dib blue b--blue ba pt2 pb2 lh-copy ml2" href="javascript:void(0)">
             SKIP TRAIN
           </a>
         </div>
