added progress bar

--- a/service-web/src/components/challengeStates/done/done.html
+++ b/service-web/src/components/challengeStates/done/done.html
@@ -22,25 +22,25 @@
           Well done, how do you feel about it?
         </p>
         <div class="cf db">
-                <span class=" dib mr1 mood-icons">
+                <span @click.stop.prevent="setRating(1)" class=" dib mr1 mood-icons">
                   <img src="../../../assets/images/smile1.svg" alt="Mountains" class="smile-mood-icon w2"/>
-                  <img src="../../../assets/images/smile1selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
+                  <img src="../../../assets/images/smile1selected.svg" alt="" :class="{'selected-smile-icon hvr-smile-icon active-mood-icon': (rating===1), 'selected-smile-icon hvr-smile-icon': (rating !== 1)}"/>
                 </span>
-          <span class=" dib mr1 mood-icons">
+          <span @click.stop.prevent="setRating(2)" class=" dib mr1 mood-icons">
                   <img src="../../../assets/images/smile2.svg" alt="Mountains" class="smile-mood-icon w2"/>
-                  <img src="../../../assets/images/smile2selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
+                  <img src="../../../assets/images/smile2selected.svg" alt="" :class="{'selected-smile-icon hvr-smile-icon active-mood-icon': (rating===2), 'selected-smile-icon hvr-smile-icon': (rating !== 2)}"/>
                 </span>
-          <span class=" dib mr1 mood-icons">
+          <span @click.stop.prevent="setRating(3)" class=" dib mr1 mood-icons">
                   <img src="../../../assets/images/smile3.svg" alt="Mountains" class="smile-mood-icon w2"/>
-                  <img src="../../../assets/images/smile3selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
+                  <img src="../../../assets/images/smile3selected.svg" alt="" :class="{'selected-smile-icon hvr-smile-icon active-mood-icon': (rating===3), 'selected-smile-icon hvr-smile-icon': (rating !== 3)}"/>
                 </span>
-          <span class=" dib mr1 mood-icons">
+          <span @click.stop.prevent="setRating(4)" class=" dib mr1 mood-icons">
                   <img src="../../../assets/images/smile4.svg" alt="Mountains" class="smile-mood-icon w2"/>
-                  <img src="../../../assets/images/smile4selected.svg" alt="" class="selected-smile-icon hvr-smile-icon active-mood-icon"/>
+                  <img src="../../../assets/images/smile4selected.svg" alt="" :class="{'selected-smile-icon hvr-smile-icon active-mood-icon': (rating===4), 'selected-smile-icon hvr-smile-icon': (rating !== 4)}"/>
                 </span>
-          <span class=" dib mr1 mood-icons">
+          <span @click.stop.prevent="setRating(5)" class=" dib mr1 mood-icons">
                   <img src="../../../assets/images/smile5.svg" alt="Mountains" class="smile-mood-icon w2"/>
-                  <img src="../../../assets/images/smile5selected.svg" alt="" class="selected-smile-icon hvr-smile-icon"/>
+                  <img src="../../../assets/images/smile5selected.svg" alt="" :class="{'selected-smile-icon hvr-smile-icon active-mood-icon': (rating===5), 'selected-smile-icon hvr-smile-icon': (rating !== 5)}"/>
                 </span>
         </div>
         <div class="w-100 center mt2">
