--- a/service-web/src/components/loader/loader.html
+++ b/service-web/src/components/loader/loader.html
@@ -1,4 +1,6 @@
-<div class="loader-backdrop">
-  <div class="loader"></div>
+<!--<div class="loader-backdrop">-->
+  <!--<div class="loader"></div>-->
+<!--</div>-->
+<div style="position: fixed;top: 0;width: 100%;">
+  <el-progress :percentage="percentage" :show-text="false" type="line" status="exception" :stroke-width="10" color="#000000"></el-progress>
 </div>
-<!--<el-progress :percentage="percentage" show-text="false" color="#8e71c7"></el-progress>-->
